# C_PROGRAMMING

./: ABC.c  ASCII Value.c  Algebric Identities.c  Area of circle.c  CMakeLists.txt  Calculation user input.c  Celcius to Farenheit.c  Change the value by taking input from thr user.c  Currency Converter.c  Digital storage converter.c  Discriminant.c  Distance betwee 2 points.c  Fibonacci_Series.c  Haron's Formula.c  Memory Address of 5 Variable.c  Pyramid (star).c  Radius of circle.c  Simple Interest.c  Straight line or not.c  Swap with 3rd variable.c  Swap without third variable using function.cpp
