cmake_minimum_required(VERSION 3.26)
project(C_PROGRAMMING C)

set(CMAKE_C_STANDARD 23)

add_executable(C_PROGRAMMING
        #"main.c"
        #"ASCII Value.c"
        #"Celcius to Farenheit.c"
        #"Currency Converter.c"
        #"Algebric Identities.c"
        #"Memory Address of 5 Variable.c"
        #"Change the value by taking input from thr user.c"
        #"Calculation user input.c"
        #"Swap with 3rd variable.c"
        #"Swap without 3rd variable.c"
        #"Discriminant.c"
        #"Radius of circle.c"
        #"Pyramid (star).c"
        #"Simple Interest.c"
        #"Digital storage converter.c"
        #"Haron's Formula.c"
        #"Straight line or not.c"
        "Distance betwee 2 points.c"
        #"Swap using function.c"
        #"Fibonacci_Series.c"
)